<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.xplorun.LoadRoutesActivity">


    <TextView
        android:id="@+id/text_uniqueness"
        style="@style/FeaturesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/uniqueness"
        app:layout_constraintStart_toEndOf="@+id/space5"
        app:layout_constraintTop_toBottomOf="@+id/text_elevation" />

    <TextView
        android:id="@+id/text_length"
        style="@style/FeaturesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_elevation"
        style="@style/FeaturesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elevation"
        app:layout_constraintStart_toEndOf="@+id/space5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_ped_friend"
        style="@style/FeaturesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pedestrian_friendliness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nature" />

    <TextView
        android:id="@+id/text_nature"
        style="@style/FeaturesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nature_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_length" />

    <Space
        android:id="@+id/space5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
