<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xplorun.StatisticsFragment">

    <ScrollView
        android:paddingTop="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:scrollbarStyle="outsideInset"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_title"
                style="@style/H1text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Overall statistics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:theme="@style/OverallAnalysisTable"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title">

                <TableRow>

                    <TextView android:text="@string/best_pace" />

                    <TextView android:id="@+id/text_best_pace" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/total_distance" />

                    <TextView android:id="@+id/text_total_distance" />
                </TableRow>

                <TableRow>

                    <TextView android:text="Calories burned:" />

                    <TextView android:id="@+id/text_total_calories" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/longest_distance" />

                    <TextView android:id="@+id/text_longest_distance" />
                </TableRow>

                <TableRow>

                    <TextView android:text="Nature distance:" />

                    <TextView android:id="@+id/text_nature_D" />
                </TableRow>

                <TableRow>

                    <TextView android:text="Urban distance:" />

                    <TextView android:id="@+id/text_urban_D" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/xp" />

                    <TextView android:id="@+id/text_xp" />
                </TableRow>
            </TableLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_run_history"
                style="@style/H1text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Run history"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

            <LinearLayout
                android:id="@+id/layout_run_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_run_history">

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
